tests/invalid/RealConvert_Invalid_2.whiley

function f(real x, int y) -> real
requires x >= y:
    return 0.0
